fix MDEV-4735 Assertion `! is_set()' fails in Diagnostics_area::set_ok_status on attempt to create a temporary SPIDER table connecting to non-existing source